# treeland.private

./: CMakeLists.txt
data/dbus/: org.deepin.compositor1.xml
debian/: changelog  control  postinst  rules  treeland.install
examples/test_super_overlay_surface/: ddeshellwayland.cpp  ddeshellwayland.h  ddeshelsurfacewindow.cpp  main.cpp
misc/cmake/: CMakeLists.txt  TreeLandProtocolsConfig.cmake.in  TreelandCommonConfig.cmake.in  treeland-protocols.pc.in
src/: CMakeLists.txt  main.cpp  systemd-socket.cpp  treeland.cpp  treeland.h  xwayland-wrapper.cpp
src/common/: CMakeLists.txt
src/core/: CMakeLists.txt  helper.cpp  helper.h  output.cpp  shellhandler.cpp  surfacewrapper.cpp  surfacewrapper.h  treeland.cpp  treelandconfig.cpp  workspace.cpp
src/core/qml/: Decoration.qml  TaskSwitcher.qml
src/core/qml/Animations/: GeometryAnimation.qml  NewAnimation.qml
src/core/qml/Effects/: Blur.qml
src/modules/capture/: CMakeLists.txt  capture.cpp  capture.h
src/modules/dde-shell/: CMakeLists.txt  ddeshell.cpp  ddeshell.h  ddeshellmanagerinterfacev1.cpp  ddeshellmanagerinterfacev1.h
src/modules/dde-shell/impl/: ddeshellv1.cpp  ddeshellv1.h
src/modules/dde-shell/protocols/: treeland-dde-shell-v1.xml
src/modules/foreign-toplevel/: CMakeLists.txt  foreigntoplevelmanagerv1.cpp  foreigntoplevelmanagerv1.h
src/modules/personalization/: CMakeLists.txt  personalizationmanager.h  personalizationmanagerinterface.h  personalizationmanagerinterfacev1.cpp
src/modules/personalization/impl/: appearance_impl.cpp  appearance_impl.h
src/modules/primary-output/: CMakeLists.txt  outputmanagement.h
src/modules/shortcut/: CMakeLists.txt  shortcutmanager.h
src/modules/virtual-output/: CMakeLists.txt
src/modules/wallpaper-color/: CMakeLists.txt  wallpapercolor.h
src/modules/window-management/: CMakeLists.txt  windowmanagement.h
src/qml/: CMakeLists.txt  Decoration.qml  DockPreview.qml  EQHGrid.qml  LayerSurface.qml  Main.qml  MultitaskView.qml  QmlHelper.qml  StackToplevelHelper.qml  StackWorkspace.qml  SurfaceWrapper.qml  TaskSwitcher.qml  TitleBar.qml  WindowDecoration.qml
src/seat/: helper.cpp
src/settings/: CMakeLists.txt  dconfig-autogen.hpp  treelandconfig.cpp  treelandconfig.h
src/treeland/: cmdline.cpp  cmdline.h  helper.cpp  helper.h  rootstate.cpp  rootstate.h  rootsurfacecontainer.cpp  surfacewrapper.cpp  surfacewrapper.h  togglablegesture.cpp  workspace.cpp  workspace.h
src/types/: types.h
src/utils/: helper.cpp  helper.h
tests/: CMakeLists.txt
tests/test_monitor_active_event/: CMakeLists.txt  main.cpp
tests/test_super_overlay_surface/: CMakeLists.txt  ddeshellwayland.cpp  ddeshellwayland.h  ddeshelsurfacewindow.cpp  ddeshelsurfacewindow.h  main.cpp
